Fix #30. Truncate main nav with long user names.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -60,9 +60,15 @@
   }
 
   .user-dropdown-toggle {
-    cursor: pointer;
-    border: 0;
     color: $link-color;
+
+    @include media-breakpoint-up("lg") {
+      max-width: rem(118); // spacer-xl between brand and first link
+    }
+
+    @include media-breakpoint-up("xl") {
+      max-width: rem(316); // spacer-xxxl between brand and first link
+    }
 
     &:hover {
       text-decoration: none;
